...
    val selectedIcon: ImageVector,
    val unselectedIcon: ImageVector
) {
    SURAHS("Surahs", Icons.Filled.MenuBook, Icons.Outlined.MenuBook),
    DOWNLOADS("Offline", Icons.Filled.CloudDone, Icons.Outlined.CloudDone),
    RECITERS("Qaris", Icons.Filled.RecordVoiceOver, Icons.Outlined.RecordVoiceOver),
    SAVED("Saved", Icons.Filled.Bookmark, Icons.Outlined.BookmarkBorder),
    PLAYLISTS("Playlists", Icons.Filled.QueueMusic, Icons.Outlined.QueueMusic)
}

@Composable
fun QuranApp(
    viewModel: QuranViewModel = viewModel()
) {
...
